<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/proposer"
        style="@style/btn_proposer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:height="100dp"
        android:text="@string/proposer"
        android:textSize="18sp"
        android:width="200dp" />

    <ImageView
        android:id="@+id/logoidf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/rechercher"
        style="@style/btn_rechercher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/proposer"
        android:layout_below="@+id/logoidf"
        android:layout_marginTop="28dp"
        android:height="100dp"
        android:text="@string/rechercher"
        android:textSize="18sp"
        android:width="200dp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="36dp"
        android:text="@string/adresse"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
